<resources>
    <string name="app_facebook_id">584362065239926</string>
    <string name="app_name">SuggestMe</string>

    <string name="btn_hint_login">Sign in</string>
    <string name="tv_hint_sing_up">Sing up for SuggestMe</string>

    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="et_re_hint_password">Repeat password</string>
    <string name="btn_hint_register">Sign up </string>
    <string name="btn_hint_log_out">Sing out</string>

    <string name="alert_empty_email">Email is empty</string>
    <string name="alert_empty_password">Password is empty</string>
    <string name="alert_email_not_valid">Email not valid</string>
    <string name="alert_password_not_valid">Password not valid</string>
    <string name="alert_password_to_short">Password to short min 8 symbols</string>
    <string name="alert_repeat_password_empty">Repeat password is empty</string>
    <string name="alert_repassword_not_equals">Repeat password not equals password</string>

    <string name="category_cinema">Cinema Recomendations</string>
    <string name="category_music">Music Recomendations</string>
    <string name="category_weather">Weather</string>
    <string name="category_news">News</string>
    <string name="category_crypto">Crypto Info</string>
    <string name="category_cooking">Cooking book</string>

    <string name="SymbolDegreesAndCelsius"><![CDATA[&#8451;]]></string>

    <string name="dialog_title_choose_country">Choose country</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_submit">Submit</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_title_nothing_to_show">Nothing to show</string>
    <string name="dialog_message">At the moment we don\'t have any source for this country,
        please choose another country</string>
    <string name="dialog_title_no_criterias">No criterias</string>
    <string name="dialog_message_no_criterias">Please choose criterias</string>


    <string name="tv_pick_sourse">Pick source</string>
    <string name="tv_pick_country">Pick country</string>
    <string name="tv_pick_date">Pick date</string>

    <string name="tv_hint_publisher">Publisher: </string>
    <string name="tv_hint_socialRate">Social rate: </string>

    <string name="tv_hint_search_recipes">Input ingredients by comma</string>

    <array name="countries_names">
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>France</item>
        <item>Japan</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>Poland</item>
        <item>Russia</item>
        <item>Serbia</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </array>

    <array name="countries_arg">
        <item>ar</item>
        <item>au</item>
        <item>at</item>
        <item>be</item>
        <item>br</item>
        <item>ca</item>
        <item>ch</item>
        <item>co</item>
        <item>cu</item>
        <item>fr</item>
        <item>jp</item>
        <item>mx</item>
        <item>ma</item>
        <item>pl</item>
        <item>ru</item>
        <item>rs</item>
        <item>ua</item>
        <item>gb</item>
        <item>us</item>
    </array>


    <array name="cinema_sub_items">
        <item>Top rated movies</item>
        <item>Top rated TV shows</item>
        <item>Popular movies</item>
        <item>Popular TV shows</item>
        <item>Movie description</item>
        <item>TV show description</item>
    </array>

    <array name="music_sub_items">
        <item>Popular artists</item>
        <item>Popular tracks</item>
        <item>Top albums by Artist</item>
    </array>

    <array name="weather_sub_items">
        <item>Current weather</item>
        <item>Weather for 5 days</item>
    </array>

    <array name="news_sub_items">
        <item>Top news</item>
        <item>Search by criteria</item>
    </array>

    <array name="cooking_sub_items">
        <item>Search recipes by ingredients</item>
        <item>Popular recipes</item>
    </array>

    <string name="btn_hint_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
