<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    android:fitsSystemWindows="true"
    tools:context="bohdan.hushcha.sushchak.suggestme.activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_start_activity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/marginEndLoginEd"
            android:layout_marginStart="@dimen/marginStartLoginEd"
            android:layout_marginTop="170dp"
            app:errorTextAppearance="@style/error_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/marginEndLoginEd"
            android:layout_marginStart="@dimen/marginStartLoginEd"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/error_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/textColorPrimary"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/btn_hint_login"
            android:textSize="@dimen/textSizeNormal"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sing_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

        </com.google.android.gms.common.SignInButton>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            facebook:com_facebook_login_text="@string/lb_text_facebook"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/tvRegister_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/tv_hint_sing_up"
            android:textColor="#fff"
            android:textSize="@dimen/textSizeSmall"/>
    </LinearLayout>
</RelativeLayout>
