<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    android:fitsSystemWindows="true"
    tools:context="bohdan.hushcha.sushchak.suggestme.activities.RegisterActivity">
    <!--
        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTopLogo"
            android:text="@string/app_name"
            android:textColor="@color/colorTextLogo"
            android:textSize="@dimen/textSizeLogo"
            android:typeface="normal"/> -->


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_start_activity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/marginEndLoginEd"
            android:layout_marginStart="@dimen/marginStartLoginEd"
            android:layout_marginTop="170dp"
            app:errorTextAppearance="@style/error_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/marginEndLoginEd"
            android:layout_marginStart="@dimen/marginStartLoginEd"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/error_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/rePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/marginEndLoginEd"
            android:layout_marginStart="@dimen/marginStartLoginEd"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/error_appearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_re_hint_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/btn_hint_register"
            android:textSize="@dimen/textSizeNormal"/>

    </LinearLayout>
</RelativeLayout>
